--- a/src/template/styles/Login.css
+++ b/src/template/styles/Login.css
@@ -33,7 +33,7 @@
 
     .right-container form{
         height: fit;
-       
+       display: block;
       
         gap: 50px;
         
@@ -41,14 +41,14 @@
 
     .Main-Container{
        width: 96%;
-       
+       box-shadow: none;
         height: fit-content;
-        justify-content: center;
-        align-items: center;
+        /* justify-content: center;
+        align-items: center; */
     }
 
     .right-container{
-
+       
        padding: 20px;
         min-width: 100%;
         height: 100%;
@@ -59,6 +59,10 @@
 .left-img-conatiner{
     width: 50%;
     height: 100%;
+}
+
+h2{
+    text-align: center;
 }
 
 .right-container{
@@ -80,7 +84,7 @@
 
 .right-container form{
 
-    gap: 20px;
+    gap: 23px;
      width: 90%;    
      height: fit;
      
